# python-deadlib

./: .gitignore  README.md  requirements_test.txt
.github/workflows/: _crypt.yml  release.yaml  tests.yaml
_crypt/: Cargo.toml  pyproject.toml
_crypt/src/: lib.rs
aifc/: pyproject.toml
aifc/aifc/: __init__.py
aifc/tests/: audiotests.py  test_aifc.py
asynchat/: pyproject.toml
asynchat/asynchat/: __init__.py
asyncore/: pyproject.toml
asyncore/asyncore/: __init__.py
cgi/: pyproject.toml
cgi/cgi/: __init__.py
cgitb/: pyproject.toml
cgitb/cgitb/: __init__.py
chunk/: pyproject.toml
chunk/chunk/: __init__.py
crypt/: pyproject.toml
crypt/crypt/: __init__.py
distutils/: pyproject.toml
distutils/distutils/tests/: test_versionpredicate.py
imghdr/: pyproject.toml
imghdr/imghdr/: __init__.py
imghdr/tests/: test_imghdr.py
mailcap/: pyproject.toml
mailcap/mailcap/: __init__.py
mailcap/tests/: test_mailcap.py
msilib/: pyproject.toml
nis/: pyproject.toml
nntplib/: pyproject.toml
nntplib/nntplib/: __init__.py
ossaudiodev/: pyproject.toml
pipes/: pyproject.toml
pipes/pipes/: __init__.py
scripts/: Dockerfile  helper.py  run_test.py  update.py
smtpd/: pyproject.toml
smtpd/smtpd/: __init__.py
sndhdr/: pyproject.toml
sndhdr/sndhdr/: __init__.py
sndhdr/tests/: test_sndhdr.py
spwd/: pyproject.toml
sunau/: pyproject.toml
sunau/sunau/: __init__.py
sunau/tests/: test_sunau.py
telnetlib/: pyproject.toml
telnetlib/telnetlib/: __init__.py
template/: pyproject.toml
uu/: pyproject.toml
uu/uu/: __init__.py
xdrlib/: pyproject.toml
xdrlib/xdrlib/: __init__.py
