[project]
name = "standard-aifc"
version = "3.12.2"
description = "Standard library aifc redistribution. \"dead battery\"."
keywords = ["stdlib"]
authors = [
    { name = "Python Developers", email = "python-deadlib@youknowone.org" }
]
readme = "README.rst"
license = {name = "PSF", file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Python Software Foundation License",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "chunkmuncher>=0.0.2", # chunkmuncher sits of different namespace to python core chunk module, so can install it on all versions
    "audioop-lts; python_version >= '3.13'", # audioop uses same namespace as python core module, so only install it on versions where it's not included
]

[tool.setuptools.packages]
find = {include = ["aifc*"]}

[project.urls]
"Homepage" = "https://github.com/youknowone/python-deadlib"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
