[project]
name = "standard-imghdr"
version = "3.13.0"
description = "Standard library imghdr redistribution. \"dead battery\"."
keywords = ["stdlib"]
authors = [
    { name = "Python Developers", email = "python-deadlib@youknowone.org" }
]
readme = "README.rst"
license = { text = "PSF-2.0" }
classifiers = [
    "License :: OSI Approved :: Python Software Foundation License",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages]
find = {include = ["imghdr*"]}

[project.urls]
"Homepage" = "https://github.com/youknowone/python-deadlib"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
