[project]
name = "ossaudiodev"
version = "{version}"
description = "The removed dead batteries"
keywords = ["stdlib"]
authors = [
    { name = "Python Devleopers", email = "python-dead-batteries@youknowone.org" }
]
readme = "README.md"
license = {text = "PSF", file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Python Software Foundation License",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
]

# [tool.setuptools.packages.find]
# include = ["ossaudiodev.py", "ossaudiodev"]  # package names should match these glob patterns (["*"] by default)
# namespaces = false

[project.urls]
"Homepage" = "https://github.com/youknowone/python-deadlib"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
