[project]
name = "standard-sunau"
version = "3.13.0"
description = "Standard library sunau redistribution. \"dead battery\"."
keywords = ["stdlib"]
authors = [
    { name = "Python Developers", email = "python-deadlib@youknowone.org" }
]
readme = "README.rst"
license = { text = "PSF-2.0" }
classifiers = [
    "License :: OSI Approved :: Python Software Foundation License",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "audioop-lts; python_version >= '3.13'", # audioop uses same namespace as python core module, so only install it on versions where it's not included
]

[tool.setuptools.packages]
find = {include = ["sunau*"]}

[project.urls]
"Homepage" = "https://github.com/youknowone/python-deadlib"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
